# stratus

./: .editorconfig  .gitignore  .pr-agent.toml  ASSESSMENT_AND_ROADMAP.md  CONTRIBUTING.md  GUARDRAILS.md  HANDOFF.md  PROJECT_STATUS.md  README.md  TEAM_ONBOARDING.md  TEAM_STRUCTURE.md  debug_auth_response.json  install.sh  introspect.txt  payload.json  sidecar.py  xplane_proton_bridge.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr_agent.yml
.legacy_client/: PI_Stratus.py  overlay.py  requirements.txt
.legacy_client/docs/: XPLANE_12_PLATFORM.md  XPLANE_ATC_COMPARISON.md
.legacy_client/src/: cli.py  main.py
.legacy_client/src/audio/: __init__.py  downloader.py  handler.py
.legacy_client/src/core/: __init__.py  airport_manager.py  ambient_chatter.py  atc_prompt.py  context_builder.py  controller_personality.py  copilot.py  flight_phase.py  handoff.py  latency.py  model_warmup.py  readback_scoring.py  response_cache.py  seca_logger.py  sim_data.py  sim_installer.py  speech_interface.py  squawk.py  streaming_llm.py  validation.py
.legacy_client/src/core/providers/: base.py  factory.py
.legacy_client/src/telemetry/: file_watcher.py
.legacy_client/src/tests/: test_audio.py
.legacy_client/src/ui/: __init__.py  comms_widget.py  frequency_panel.py  main_window.py  status_panel.py  system_tray.py  transmission_panel.py  workers.py
.legacy_client/src/web/: __init__.py  server.py
.legacy_client/tests/: test_copilot.py  test_gate_flow.py  test_overrides.py  test_telemetry_endpoint.py  test_xplane_webapi.py  test_xplane_websocket.py
adapters/: dummy_xplane.c
adapters/xplane/: CMakeLists.txt  PI_SayIntentions.py  PI_Stratus.py  README.md  overlay.py
adapters/xplane/StratusATC/lin_x64/: StratusATC.xpl
adapters/xplane/src/: stratus_plugin.c
client/: requirements.txt
client/src/: cli.py  main.py
client/src/audio/: __init__.py  downloader.py  handler.py  player.py
client/src/core/: __init__.py  copilot.py  sapi_interface.py  sim_data.py  sim_installer.py  speech_interface.py
client/src/core/providers/: local.py
client/src/tests/: test_audio.py
client/src/ui/: __init__.py  comms_widget.py  frequency_panel.py  main_window.py  settings_panel.py  status_panel.py  styles.py  system_tray.py  transmission_panel.py  workers.py
client/src/web/: __init__.py  server.py
docs/: ATC_EVALUATION.md  ATC_ROADMAP.md  BITNET_VS_OLLAMA.md  INTEGRATION_RESEARCH.md  OFFLINE_ATC_HANDOFF.md  QUALITY_AND_CI.md  RUST_VS_PYTHON_ANALYSIS.md  SAPI_FINDINGS.md  SPEECHD_NG_ANALYSIS.md  TEST_HARNESS_DESIGN.md  VFR_PHRASEOLOGY.md  XPLANE_12_PLATFORM.md  XPLANE_EXTENSIONS.md
docs/decisions/: ADR-001-Defer-Speechd-NG.md
release/stratus-atv-v0.1.0/: README.md  REALISM_NOTES.md  install.sh
scripts/: check_regression.sh  create_dummy_flight.py  install_plugin.sh  package_release.sh  test_dbus_integration.sh
stratus-rs/: Cargo.toml  rustfmt.toml
stratus-rs/stratus-bitnet/: Cargo.toml
stratus-rs/stratus-bitnet/src/: lib.rs  model.rs  quant.rs
stratus-rs/stratus-commander/: Cargo.toml
stratus-rs/stratus-commander/src/: lib.rs
stratus-rs/stratus-core/: Cargo.toml
stratus-rs/stratus-core/src/: atc.rs  atc_tests.rs  commands.rs  commands_tests.rs  config.rs  lib.rs  ollama.rs  speech.rs  streaming.rs  voice.rs
stratus-rs/stratus-eval/: Cargo.toml
stratus-rs/stratus-eval/scenarios/: bitnet_smoke.yaml  vfr_arrival.yaml  vfr_basic.yaml  vfr_emergency.yaml
stratus-rs/stratus-eval/src/: main.rs
stratus-rs/stratus-gui/: Cargo.toml
stratus-rs/stratus-gui/src/: app.rs  comlink.rs
stratus-rs/stratus-voice/: Cargo.toml
stratus-rs/stratus-voice/src/: audio_capture.rs  config.rs  main.rs  ptt_hook.rs  whisper_integration.rs
tests/: debug_all_endpoints.py  debug_auth_token.py  debug_comlink_types.py  debug_comlink_ws.py  debug_continuous_sapi.py  debug_continuous_telemetry.py  debug_efb_flow.py  debug_endpoints.py  debug_flight_id.py  debug_flight_id_guessing.py  debug_flight_json_upload.py  debug_flight_plan_submit.py  debug_full_sequence_v2.py  debug_heartbeat_session.py  debug_integration_test.py  debug_integration_with_token.py  debug_lambda_fuzz.py  debug_location_persistence.py  debug_portal_repro.py  debug_portal_status.py  debug_proto_fuzz.py  debug_reconnect.py  debug_sapi_telemetry_fuzz.py  debug_sayAs.py  debug_sayAs_acars.py  debug_session_cookies.py  debug_siai_commands.py  debug_simapi_content_types.py  debug_simapi_deep_dive.py  debug_simapi_host_fuzz.py  debug_simapi_proper_format.py  debug_simapi_raw.py  debug_simapi_token_fuzz.py  debug_simapi_upload.py  debug_simapi_upload_fuzz.py  debug_simapi_with_token.py  debug_simbrief.py  debug_simbrief_id.py  debug_spam_telemetry.py  debug_start_flight_payload.py  (+13 more)
