[package]
name = "stratus-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
stratus-core = { path = "../stratus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = "1"
wiremock = "0.6"
