[package]
name = "stratus-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
stratus-core = { path = "../stratus-core" }

tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
iced.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs = "6"
