[package]
name = "stratus-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
# IPC
dbus = "0.9"
dbus-tree = "0.9"

# Audio Pipeline
cpal = "0.15"
webrtc-vad = "0.4"

# Input Hook
evdev = "0.12"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
nix = "0.27"
tempfile = "3.8"
toml = "0.8"
dirs = "6"
